# platform.core.uifw.libeom

./: Makefile.am  NOTICE  configure.ac
doc/: ui_eom_doc.h
include/: Makefile.am  eom-connect.h  eom.h  eom.pc.in  eom_internal.h
packaging/: libeom.spec
src/: Makefile.am  eom-connect.c  eom-dbus.c  eom-dbus.h  eom-log.h  eom-private.h  eom.c
src/dbus/: eom-connect.c  eom-dbus.c  eom-dbus.h
src/wayland/: eom-wayland.c  eom-wayland.h
src/wayland/protocol/: eom-client-protocol.h  eom-protocol.c  eom.xml  xdg-shell-protocol.c
tests/: Makefile.am  eom-test-output.c
